--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,75 @@
 * {
     background: black;
-    position: absolute;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 91vh;
 }
 
 .box1 {
-    width: 298px;
-    height: 411px;
+    position: absolute;
+    width: 18.5rem;
+    height: 26rem;
     border-radius: 1rem;
     background: rgb(38, 40, 46);
-    top: 100px;
-    left: 500px;
-    transition: 500ms cubic-bezier(.05, .43, .25, .95);
-    z-index: 2;
+    transition: 500ms cubic-bezier(0.05, 0.43, 0.25, 0.95);
     box-shadow: 0px 0px 20px black;
-    
+    z-index: 2;
 }
 
 .box2 {
-    width: 298px;
-    height: 411px;
+    position: absolute;
+    width: 18.5rem;
+    height: 26rem;
+    margin-left: -2.5rem;
+    rotate: -4deg;
     border-radius: 1rem;
     background: rgb(64, 68, 78);
-    top: 100px;
-    left: 460px;
-    transition: 500ms cubic-bezier(.05, .43, .25, .95);
-    z-index: 1;
-    rotate: -4deg;
+    transition: 500ms cubic-bezier(0.05, 0.43, 0.25, 0.95);
     box-shadow: 0px 0px 20px black;
+    z-index: 1;
 }
 
 .box3 {
-    width: 298px;
-    height: 411px;
+    position: absolute;
+    width: 18.5rem;
+    height: 26rem;
+    rotate: 4deg;
+    margin-top: 1.25rem;
+    margin-left: 2.813rem;
     border-radius: 1rem;
     background: rgb(64, 68, 78);
-    top: 120px;
-    left: 545px;
-    transition: 500ms cubic-bezier(.05, .43, .25, .95);
-    z-index: 3;
-    rotate: 4deg;
+    transition: 500ms cubic-bezier(0.05, 0.43, 0.25, 0.95);
     box-shadow: 0px 0px 20px black;
+    z-index: 3;
 }
 
-.box:hover > .box2 {
-    transform: rotate(-8deg);
-    top: 130px;
-    left: 370px;
-}
-
-.box:hover > .box1 {
+.box:hover .box1 {
     transform: rotate(-4deg);
-    top: 100px;
-    left: 500px;
 }
 
-.box:hover > .box3{
+.box:hover .box2 {
+    transform: rotate(-8deg);
+    margin-left: -15rem;
+    margin-top: 3rem;
+}
+
+.box:hover .box3 {
     transform: rotate(4deg);
-    top: 140px;
-    left: 620px;
-}
-
-.box:not(:hover) > .box2 {
-
-    transition: 800ms cubic-bezier(.12,.84,.31,.9); 
-}
-
-.box:not(:hover) > .box1 {
- 
-    transition: 800ms cubic-bezier(.12,.84,.31,.9);
-}
-
-.box:not(:hover) > .box3{
-
-    transition: 800ms cubic-bezier(.12,.84,.31,.9);
+    margin-top: 5rem;
+    margin-left: 15rem;
 }
 
 .hub {
-    top: 10px;
-    left: 10px;
-    background: transparent;
-    font-size: 25px;
-    border: 2px solid rgb(173, 173, 173);
+    position: absolute;
+    height: 1.5rem;
+    left: -8rem;
+    top: 7.5rem;
     border-radius: 50%;
-    color: rgb(173, 173, 173);
-    transition: .25s;
+    font-size: 25px;
+    background: transparent;
+    color: rgb(209, 209, 209);
+    border: 3px solid rgb(209, 209, 209);
 }
-
-
- .hub:hover {
-    color: rgb(223, 223, 223);
-    border: 2px solid rgb(233, 233, 233)
- }
-
- img {
-    width: 60%;
-    left: 60px;
-    top: 12px;
-    border-radius: 1rem;
-    
- }
-
- .box1.active {
-    left: 300px;
-    rotate: 4deg;
- }
-
- .box:hover .box1.active {
-    left: 300px;
-    rotate: 4deg;
- }
- .box .box1.active {
-    rotate: 0deg;
- }
